[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Bug-anim/with-arms/walk/7.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://UI/PowerCircle.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/WeaponUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/PowerGauge.tscn" type="PackedScene" id=5]
[ext_resource path="res://SFX/WeaponSoundLow.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/WeaponSound.wav" type="AudioStream" id=7]
[ext_resource path="res://UI/ChipCounter.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/WallCounter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/5.png" type="Texture" id=11]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Bug-anim/with-arms/idle/1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Bug-anim/with-arms/idle/3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Bug-anim/with-arms/walk/1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Bug-anim/with-arms/idle/4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Bug-anim/with-arms/idle/2.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle-right",
"speed": 6.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk-right",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.3929, 43.5885 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="PowerCircle" parent="." instance=ExtResource( 3 )]
rect_scale = Vector2( 0.3, 0.3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WallCounter" parent="CanvasLayer" instance=ExtResource( 9 )]
margin_left = 782.211
margin_top = 16.9271
margin_right = 782.21
margin_bottom = 16.9271

[node name="PowerGauge" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 42.231
margin_top = 44.0007
margin_right = 42.2312
margin_bottom = 44.0007

[node name="WeaponUI" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 281.519
margin_top = 12.9763
margin_right = 536.519
margin_bottom = 101.976

[node name="ChipCounter" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_left = 610.517
margin_top = 20.1434
margin_right = 650.517
margin_bottom = 60.1434

[node name="WeaponSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="WeaponSoundLow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="LagTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk-right"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="timeout" from="LagTimer" to="." method="_on_LagTimer_timeout"]
